--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
   ],
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit",
+    "test-gui": "mocha ./test/*.gui.js --exit",
     "release": "release-script",
     "build": "gulp",
     "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
     "release-major": "release-script major --yes",
     "translate": "translate-adapter",
-    "update-packages": "ncu --upgrade",
+    "update-packages": "ncu --upgrade && cd src-widgets && ncu --upgrade",
     "npm": "npm i && cd src-widgets && npm i -f"
   },
   "engines": {
