--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "test-gui": "mocha ./test/*.gui.js --exit",
     "release": "release-script",
     "build": "gulp",
+    "prepublishOnly": "npm run build",
     "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
     "release-major": "release-script major --yes",
