--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -42,35 +42,35 @@ jobs:
 
   # Runs adapter tests on all supported node versions and OSes
   adapter-tests:
-    if: contains(github.event.head_commit.message, '[skip ci]') == false
-
-    needs: [check-and-lint]
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-        os: [ubuntu-latest]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install Dependencies
-        run: npm i
-
-      - name: Run local tests
-        run: npm test
-      - name: Run integration tests # (linux/osx)
-        if: startsWith(runner.OS, 'windows') == false
-        run: DEBUG=testing:* npm run test:integration
-      - name: Run integration tests # (windows)
-        if: startsWith(runner.OS, 'windows')
-        run: set DEBUG=testing:* & npm run test:integration
+#    if: contains(github.event.head_commit.message, '[skip ci]') == false
+#
+#    needs: [check-and-lint]
+#
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        node-version: [18.x, 20.x]
+#        os: [ubuntu-latest]
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Use Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#
+#      - name: Install Dependencies
+#        run: npm i
+#
+#      - name: Run local tests
+#        run: npm test
+#      - name: Run integration tests # (linux/osx)
+#        if: startsWith(runner.OS, 'windows') == false
+#        run: DEBUG=testing:* npm run test:integration
+#      - name: Run integration tests # (windows)
+#        if: startsWith(runner.OS, 'windows')
+#        run: set DEBUG=testing:* & npm run test:integration
 
   adapter-tests-gui:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
