--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lib/"
   ],
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha ./test/*.engine.js --exit",
+    "test": "mocha ./test/*.engine.js --exit",
     "test-gui": "mocha ./test/*.gui.js --exit",
     "release": "release-script",
     "build": "gulp",
