--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -106,7 +106,7 @@ jobs:
 
   # Deploys the final package to NPM
   deploy:
-    needs: [adapter-tests-gui]
+    needs: [adapter-tests-gui, adapter-tests]
 
     # Trigger this step only when a commit on master is tagged with a version number
     if: |
