--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -67,10 +67,10 @@ jobs:
         run: npm test
       - name: Run integration tests # (linux/osx)
         if: startsWith(runner.OS, 'windows') == false
-        run: DEBUG=testing:* npm run test:integration
+        run: DEBUG=testing:* npm run test
       - name: Run integration tests # (windows)
         if: startsWith(runner.OS, 'windows')
-        run: set DEBUG=testing:* & npm run test:integration
+        run: set DEBUG=testing:* & npm run test
 
   adapter-tests-gui:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
