--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "files": [
     "admin/",
     "main.js",
+    "img/widgetExamples.png",
     "LICENSE",
     "widgets",
     "io-package.json",
