--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "NMEA0183"
   ],
   "dependencies": {
-    "@canboat/canboatjs": "^2.5.7",
-    "@iobroker/adapter-core": "^3.0.4"
+    "@canboat/canboatjs": "^2.6.0",
+    "@iobroker/adapter-core": "^3.1.6",
+    "geo-tz": "^8.0.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.7.0",
@@ -24,9 +25,9 @@
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "eslint": "^8.57.0",
     "gulp": "^4.0.2",
-    "mocha": "^10.3.0",
-    "@iobroker/vis-2-widgets-react-dev": "^1.0.5",
-    "@iobroker/vis-2-widgets-testing": "^1.0.0"
+    "mocha": "^10.4.0",
+    "@iobroker/vis-2-widgets-react-dev": "^1.0.7",
+    "@iobroker/vis-2-widgets-testing": "^1.0.3"
   },
   "bugs": {
     "url": "https://github.com/ioBroker/ioBroker.nmea/issues"
