--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@canboat/canboatjs": "^2.6.0",
     "@iobroker/adapter-core": "^3.1.6",
-    "geo-tz": "^8.0.2"
+    "geo-tz": "^8.0.2",
+    "moment": "^2.29.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.7.0",
