--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.7.0",
-    "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
+    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/types": "^6.0.1-alpha.0-20240603-8378eb65c",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@iobroker/types": "^6.0.5",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
     "eslint": "^8.57.0",
     "gulp": "^4.0.2",
-    "mocha": "^10.4.0",
-    "@iobroker/vis-2-widgets-react-dev": "^1.0.7",
-    "@iobroker/vis-2-widgets-testing": "^1.0.3",
-    "typescript": "~5.4.5"
+    "mocha": "^10.5.2",
+    "@iobroker/vis-2-widgets-react-dev": "^2.0.1",
+    "@iobroker/vis-2-widgets-testing": "^1.0.4",
+    "typescript": "~5.5.2"
   },
   "bugs": {
     "url": "https://github.com/ioBroker/ioBroker.nmea/issues"
