--- a/src-widgets/package.json
+++ b/src-widgets/package.json
@@ -7,12 +7,10 @@
         "@craco/craco": "^7.1.0",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
-        "@iobroker/adapter-react-v5": "^5.0.5",
-        "@iobroker/vis-2-widgets-react-dev": "^1.0.7",
-        "@mui/icons-material": "^5.15.19",
-        "@mui/material": "5.14.14",
-        "@mui/styles": "5.14.14",
-        "@mui/system": "5.14.14",
+        "@iobroker/adapter-react-v5": "^6.0.13",
+        "@iobroker/vis-2-widgets-react-dev": "^2.0.1",
+        "@mui/icons-material": "^5.15.21",
+        "@mui/material": "^5.15.21",
         "color": "^4.2.3",
         "craco-esbuild": "^0.6.1",
         "craco-module-federation": "^1.1.0",
@@ -20,9 +18,9 @@
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-eqeqeq-fix": "^1.0.3",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-jsx-a11y": "^6.9.0",
         "eslint-plugin-only-warn": "^1.1.0",
-        "eslint-plugin-react": "^7.34.2",
+        "eslint-plugin-react": "^7.34.3",
         "eslint-plugin-react-hooks": "^4.6.2",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
@@ -31,7 +29,7 @@
         "react-scripts": "^5.0.1",
         "react-svg-path": "^1.14.0",
         "react-beautiful-dnd": "^13.1.1",
-        "sass": "^1.77.4",
+        "sass": "^1.77.6",
         "uuid": "^10.0.0"
     },
     "scripts": {
