--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ package-lock.json
 /src-widgets/build
 /src-widgets/node_modules
 /src-widgets/package-lock.json
+/src-widgets/.__mf__temp/
 /widgets
 
 
