--- a/package.json
+++ b/package.json
@@ -1,68 +1,65 @@
 {
-  "name": "iobroker.nmea",
-  "description": "The adapter allows the communication to NMEA2000 or NMEA0183 bus",
-  "version": "0.2.2",
-  "author": "Haev Denis <dogafox@gmail.com>",
-  "homepage": "https://github.com/ioBroker/ioBroker.nmea",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ioBroker/ioBroker.nmea"
-  },
-  "keywords": [
-    "iobroker",
-    "notification",
-    "NMEA2000",
-    "NMEA0183"
-  ],
-  "dependencies": {
-    "@canboat/canboatjs": "^2.6.0",
-    "@iobroker/adapter-core": "^3.1.6",
-    "geo-tz": "^8.0.2",
-    "moment": "^2.30.1"
-  },
-  "devDependencies": {
-    "@alcalzone/release-script": "^3.7.0",
-    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
-    "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/types": "^6.0.5",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "eslint": "^8.57.0",
-    "gulp": "^4.0.2",
-    "mocha": "^10.5.2",
-    "@iobroker/vis-2-widgets-react-dev": "^2.0.1",
-    "@iobroker/vis-2-widgets-testing": "^1.0.4",
-    "typescript": "~5.5.2"
-  },
-  "bugs": {
-    "url": "https://github.com/ioBroker/ioBroker.nmea/issues"
-  },
-  "main": "build/main.js",
-  "files": [
-    "admin/",
-    "img/widgetExamples.png",
-    "LICENSE",
-    "widgets",
-    "io-package.json",
-    "build/"
-  ],
-  "scripts": {
-    "test-gui": "mocha ./test/*.gui.js --exit",
-    "release": "release-script",
-    "prepublishOnly": "npm run build",
-    "release-patch": "release-script patch --yes",
-    "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes",
-    "translate": "translate-adapter",
-    "update-packages": "ncu --upgrade && cd src-widgets && ncu --upgrade",
-    "npm": "npm i && cd src-widgets && npm i -f",
-    "test": "mocha --exit",
-    "lint": "eslint --ext .ts src/",
-    "build": "npm run build:ts && npm run build:gui",
-    "build:gui": "gulp",
-    "build:ts": "tsc -p tsconfig.build.json"
-  },
-  "engines": {
-    "node": ">=16"
-  },
-  "license": "MIT"
+    "name": "iobroker.nmea",
+    "description": "The adapter allows the communication to NMEA2000 or NMEA0183 bus",
+    "version": "0.2.2",
+    "author": "Haev Denis <dogafox@gmail.com>",
+    "homepage": "https://github.com/ioBroker/ioBroker.nmea",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ioBroker/ioBroker.nmea"
+    },
+    "keywords": [
+        "iobroker",
+        "notification",
+        "NMEA2000",
+        "NMEA0183"
+    ],
+    "dependencies": {
+        "@canboat/canboatjs": "^2.11.1",
+        "@iobroker/adapter-core": "^3.2.3",
+        "geo-tz": "^8.1.4",
+        "moment": "^2.30.1"
+    },
+    "devDependencies": {
+        "@alcalzone/release-script": "^3.8.0",
+        "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
+        "@alcalzone/release-script-plugin-license": " ^3.7.0",
+        "@iobroker/types": "^7.0.7",
+        "@iobroker/build-tools": "^2.0.15",
+        "@iobroker/eslint-config": "^2.0.1",
+        "@iobroker/vis-2-widgets-testing": "^1.0.6",
+        "typescript": "~5.8.3"
+    },
+    "bugs": {
+        "url": "https://github.com/ioBroker/ioBroker.nmea/issues"
+    },
+    "main": "build/main.js",
+    "files": [
+        "admin/",
+        "img/widgetExamples.png",
+        "LICENSE",
+        "widgets",
+        "io-package.json",
+        "build/"
+    ],
+    "scripts": {
+        "test-gui": "mocha ./test/*.gui.js --exit",
+        "release": "release-script",
+        "prepublishOnly": "npm run build",
+        "release-patch": "release-script patch --yes",
+        "release-minor": "release-script minor --yes",
+        "release-major": "release-script major --yes",
+        "translate": "translate-adapter",
+        "update-packages": "npx -y npm-check-updates --upgrade && cd src-widgets && npx -y npm-check-updates --upgrade",
+        "npm": "npm i && cd src-widgets && npm i -f",
+        "test": "mocha --exit",
+        "lint": "eslint -c eslint.config.mjs && cd src-widgets && npm run lint",
+        "build": "npm run build:ts && npm run build:gui",
+        "build:gui": "node tasks",
+        "build:ts": "tsc -p tsconfig.build.json"
+    },
+    "engines": {
+        "node": ">=16"
+    },
+    "license": "MIT"
 }
