--- a/src-widgets/package.json
+++ b/src-widgets/package.json
@@ -1,45 +1,40 @@
 {
-    "name": "iobroker.vis-2-widgets-nmea",
+    "name": "iobroker.nmea",
     "private": true,
     "version": "0.2.2",
+    "type": "module",
     "dependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@craco/craco": "^7.1.0",
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
-        "@iobroker/adapter-react-v5": "^6.0.13",
-        "@iobroker/vis-2-widgets-react-dev": "^2.0.1",
-        "@mui/icons-material": "^5.15.21",
-        "@mui/material": "^5.15.21",
-        "color": "^4.2.3",
-        "craco-esbuild": "^0.6.1",
-        "craco-module-federation": "^1.1.0",
-        "eslint": "^8.57.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-plugin-eqeqeq-fix": "^1.0.3",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jsx-a11y": "^6.9.0",
-        "eslint-plugin-only-warn": "^1.1.0",
-        "eslint-plugin-react": "^7.34.3",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "prop-types": "^15.8.1",
+        "@iobroker/adapter-react-v5": "^7.6.15",
+        "@iobroker/types-vis-2": "^2.12.8",
+        "@module-federation/runtime": "^0.13.1",
+        "@module-federation/vite": "^1.2.7",
+        "@mui/icons-material": "^7.0.2",
+        "@mui/material": "^7.0.2",
+        "@originjs/vite-plugin-federation": "^1.4.1",
+        "@types/color": "^4.2.0",
+        "@types/react": "^18.3.20",
+        "@types/react-beautiful-dnd": "^13.1.8",
+        "@types/react-dom": "^18.3.6",
+        "@vitejs/plugin-react": "^4.4.1",
+        "color": "^5.0.0",
+        "date-fns": "^4.1.0",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-icons": "^5.2.1",
-        "react-scripts": "^5.0.1",
-        "react-svg-path": "^1.14.0",
         "react-beautiful-dnd": "^13.1.1",
-        "sass": "^1.77.6",
-        "uuid": "^10.0.0"
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.4.0",
+        "sass": "^1.87.0",
+        "uuid": "^11.1.0",
+        "vite": "6.3.4",
+        "vite-plugin-commonjs": "^0.10.4",
+        "vite-plugin-svgr": "^4.3.0",
+        "vite-tsconfig-paths": "^5.1.4"
     },
     "scripts": {
-        "start": "set PORT=4173 && craco start",
-        "old-start": "set PORT=4173 && react-scripts start",
-        "lint": "eslint --fix --ext .js,.jsx src",
-        "build": "craco build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "i18n": "node node_modules/@iobroker/vis-2-widgets-react-dev/searchI18n vis_2_widgets_material"
+        "start": "vite --port 4173",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint -c eslint.config.mjs"
     },
     "eslintConfig": {
         "extends": "react-app"
